pages post to swagger
